accueil site avec css

--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -2,9 +2,8 @@
 
 {% block body %}
     <main>
-        <h4>Page Accueil Bucket List</h4>
+        <h4>Voici les contacts : </h4>
     </main>
 {% endblock %}
-
 
 
