--- a/templates/fragments/header.html.twig
+++ b/templates/fragments/header.html.twig
@@ -6,6 +6,7 @@
     <nav>
         <ul>
             <li><a href="{{ path('home') }}">Home</a></li>
+            <li><a href="{{ path('list') }}">All wishes</a></li>
             <li><a href="{{ path('contact') }}">Contact</a></li>
         </ul>
     </nav>
