--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -34,6 +34,10 @@ main {
     color: #ff6600;
   }
 
+  .flash {
+    text-align: center;
+  }
+
   #wishes {
     text-align: center;
     margin: 100px 0 70px 0;
