--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -6,7 +6,7 @@
         <p class="wish"><strong>Titre : </strong>{{ wish.title }}</p>
         <p class="wish"><strong>Auteur : </strong>{{ wish.author }}</p>
         <p class="wish"><strong>Description : </strong>{{ wish.description }}</p>
-        <p class="wish"><strong>Description : </strong>{{ wish.dateCreated|date('d/m/y H:i') }}</p>
+        <p class="wish"><strong>Création : </strong>{{ wish.dateCreated|date('d/m/y H:i') }}</p>
 
         <article id="wishes">
             <a href="{{ path('list') }}">retour à la liste</a>
